Add new domain suffixes to moontv.yaml

--- a/Rules/moontv.yaml
+++ b/Rules/moontv.yaml
@@ -7,6 +7,7 @@ payload:
   - DOMAIN-SUFFIX,bfzypic.com
   - DOMAIN-SUFFIX,bfzy888.com
   - DOMAIN-SUFFIX,bgm.tv
+  - DOMAIN-SUFFIX,bvvvvvvv7f.com
   - DOMAIN-SUFFIX,dbzy5.com
   - DOMAIN-SUFFIX,doubanio.com
   - DOMAIN-SUFFIX,dytt-cinema.com
@@ -18,6 +19,7 @@ payload:
   - DOMAIN-SUFFIX,gsuzyi.com
   - DOMAIN-SUFFIX,gsuus.com
   - DOMAIN-SUFFIX,guangsuimage.com
+  - DOMAIN-SUFFIX,guoluche.com
   - DOMAIN-SUFFIX,huyajs.com
   - DOMAIN-SUFFIX,huyall.com
   - DOMAIN-SUFFIX,ijycnd.com
@@ -32,6 +34,7 @@ payload:
   - DOMAIN-SUFFIX,maoyanimg.top
   - DOMAIN-SUFFIX,maoyanplay.top
   - DOMAIN-SUFFIX,modujx11.com
+  - DOMAIN-SUFFIX,modujx16.com
   - DOMAIN-SUFFIX,moduzytupian.com
   - DOMAIN-SUFFIX,mtzy2.com
   - DOMAIN-SUFFIX,myqqdd.com
@@ -47,6 +50,7 @@ payload:
   - DOMAIN-SUFFIX,subokk.com
   - DOMAIN-SUFFIX,tyyswimg.com
   - DOMAIN-SUFFIX,tyyszywvod.com
+  - DOMAIN-SUFFIX,ukubf4.com
   - DOMAIN-SUFFIX,ukubf5.com
   - DOMAIN-SUFFIX,ukuapi88.com
   - DOMAIN-SUFFIX,wlcdn88.com
